plang/testing/logs/false-incorrect/3/program3.p.p
w0J (InId) :- tzCWu, u; jr1O M3 (G); h6qq7 (fC e (D) o cGa) bLdy, (uqYIq (O) (XWLju); ooceI, fZ (rG7) (V8WB) x2tyl); ((it (ePI y (Grlzr) (Zo7)); enAX); (wOkD), aMC7X epl (eQ2UL (vUsFM (i (v6wGr (Ty) (Ee5Pp) HZ5) (nwk9M (aTw b9o SZ)) (jp (g J (W81g) bRy1W (O)) (V)) (Ln)) VsiI) (UrJW))).

y (Pl2HS) (Sux) I :- df (s (ZOgC) kz) (W) Za5l, i3 AKsv.


? ((((dk)))).



